test/parser/ast/trait_declaration/implements_in_trait_error.exp
Error: Unexpected token `implements`, expected start of method
test/parser/ast/trait_declaration/implements_in_trait_error.myte:4:2-12
 4 |   implements Bar
   |   ^^^^^^^^^^